@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'commons-net:commons-net:3.6'
     compile 'org.apache.httpcomponents:httpclient:4.5.11'
