@@ -34,23 +34,23 @@ log4j.appender.stdout.Threshold=INFO
 
 
 
-######## insertedIds
-log4j.logger.insertedIds=debug, logInsertedIds
-log4j.appender.logInsertedIds=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logInsertedIds.DatePattern='.'yyyy-MM
-log4j.appender.logInsertedIds.Append=true
-log4j.appender.logInsertedIds.File=logs/inserted.log
-log4j.appender.logInsertedIds.layout=org.apache.log4j.PatternLayout
-log4j.appender.logInsertedIds.layout.ConversionPattern=%d %p [%c] - %m%n
+######## inserted cell lines
+log4j.logger.insertedCellLines=debug, insertedCellLines
+log4j.appender.insertedCellLines=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.insertedCellLines.DatePattern='.'yyyy-MM
+log4j.appender.insertedCellLines.Append=true
+log4j.appender.insertedCellLines.File=logs/insertedCellLines.log
+log4j.appender.insertedCellLines.layout=org.apache.log4j.PatternLayout
+log4j.appender.insertedCellLines.layout.ConversionPattern=%d %p [%c] - %m%n
 
-######## deletedIds
-log4j.logger.deletedIds=debug, logDeletedIds
-log4j.appender.logDeletedIds=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logDeletedIds.DatePattern='.'yyyy-MM
-log4j.appender.logDeletedIds.Append=true
-log4j.appender.logDeletedIds.File=logs/deleted.log
-log4j.appender.logDeletedIds.layout=org.apache.log4j.PatternLayout
-log4j.appender.logDeletedIds.layout.ConversionPattern=%d %p [%c] - %m%n
+######## discontinued cell lines
+log4j.logger.discontinuedCellLines=debug, discontinuedCellLines
+log4j.appender.discontinuedCellLines=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.discontinuedCellLines.DatePattern='.'yyyy-MM
+log4j.appender.discontinuedCellLines.Append=true
+log4j.appender.discontinuedCellLines.File=logs/discontinuedCellLines.log
+log4j.appender.discontinuedCellLines.layout=org.apache.log4j.PatternLayout
+log4j.appender.discontinuedCellLines.layout.ConversionPattern=%d %p [%c] - %m%n
 
 
 
